examples/invalid/EnumDuplicateNames.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

enum Color {
    Red,
    Green,
    Red
};

